--- a/style.scss
+++ b/style.scss
@@ -81,14 +81,48 @@ button:disabled {
   transition: opacity 0.5s;
 }
 
+#box-container {
+  display: none;
+  width: 800px;
+}
+
 .box {
-  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-  width: 500px;
+  width: 100%;
+  height: 300px;
   background-color: white;
   border-radius: 10px;
   font-family: "Open Sans", sans-serif;
   text-align: center;
-  padding: 40px 30px;
+}
+
+.tabs {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+.tab-btn {
+  margin: 0;
+  width: 100%;
+  font-size: 20px;
+  width: 100%;
+
+  &.active {
+    background-color: black;
+  }
+}
+
+.tab-btn:first-child {
+  border-radius: 10px 0 0 0;
+}
+
+.tab-btn:last-child {
+  border-radius: 0 10px 0 0;
+}
+
+.tabcontent {
+  display: none;
+  grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
 }
 
 .card {
