--- a/style.scss
+++ b/style.scss
@@ -88,7 +88,6 @@ button:disabled {
 
 .box {
   width: 100%;
-  height: 300px;
   background-color: white;
   border-radius: 10px;
   font-family: "Open Sans", sans-serif;
@@ -176,5 +175,11 @@ button:disabled {
   .box button {
     width: 100%;
     box-sizing: border-box;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #box-container {
+    width: 100%;
   }
 }
