--- a/style.scss
+++ b/style.scss
@@ -120,23 +120,30 @@ button:disabled {
 }
 
 .tabcontent {
+  padding: 20px;
   display: none;
   grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
+  grid-gap: 10px;
 }
 
 .card {
   align-self: center;
   justify-self: center;
-  margin: 10px;
+  margin: 0 10px 10px 10px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 100px;
-  height: 100px;
-  border-radius: 5px;
+  height: 150px;
+  border-radius: 5px 5px 0 0;
   background-color: $secondary-color;
   cursor: pointer;
-  border: 2px solid $primary-color;
+  border-style: solid;
+  border-width: 2px 2px 0 2px;
+  border-color: $primary-color;
+  transition: filter 0.2s;
+  margin-bottom: 0;
 
   &:hover {
     background-color: darken($secondary-color, 5%);
@@ -144,10 +151,69 @@ button:disabled {
 
   &.selected {
     background-color: $selected-color;
-    border: 2px solid green;
+    border-style: solid;
+    border-width: 2px 2px 0 2px;
+    border-color: green;
 
     &:hover {
       background-color: darken($selected-color, 5%);
+    }
+  }
+
+  p {
+    font-weight: 700;
+  }
+
+  img {
+    height: 70px;
+  }
+}
+
+.dropdown-arrow {
+  height: 25px;
+  width: 100px;
+  border-radius: 0 0 5px 5px;
+  border: 2px solid black;
+  background-color: $secondary-color;
+
+  &:hover {
+    background-color: darken($secondary-color, 5%);
+    cursor: pointer;
+  }
+
+  &.selected {
+    background-color: $selected-color;
+    border-style: solid;
+    border-width: 2px;
+    border-color: green;
+
+    &:hover {
+      background-color: darken($selected-color, 5%);
+    }
+  }
+}
+
+.dropdown-content {
+  z-index: 2;
+  display: none;
+  position: absolute;
+  top: 181px;
+  width: 100px;
+
+  button {
+    margin: 0;
+    width: 100%;
+    border-radius: 0;
+    background-color: #c9deff;
+    color: black;
+    font-size: 20px;
+
+    &:hover {
+      background-color: darken(#c9deff, 5%);
+    }
+
+    &.selected {
+      background-color: darken(#c9deff, 20%);
     }
   }
 }
