--- a/style.scss
+++ b/style.scss
@@ -108,6 +108,7 @@ button:disabled {
   width: 100%;
   font-size: 20px;
   width: 100%;
+  border-radius: 0;
 
   &.active {
     background-color: darken($secondary-color, 10%);
