--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -36,19 +36,15 @@
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://metatags.io/" />
+<meta property="og:url" content="https://1stopshop.xyz" />
 <meta property="og:title" content="OneStop" />
-<meta property="og:description" content="description" />
-<meta
-  property="og:image"
-  content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
-/>
+<meta property="og:description" content="Your grocery shopping buddy" />
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image" />
 <meta property="twitter:url" content="https://metatags.io/" />
 <meta property="twitter:title" content="OneStop" />
-<meta property="twitter:description" content="description" />
+<meta property="twitter:description" content="Your grocery shopping buddy" />
 <meta
   property="twitter:image"
   content="https://metatags.io/assets/meta-tags-16a33a6a8531e519cc0936fbba0ad904e52d35f34a46c97a2c9f6f7dd7d336f2.png"
