Fix relative link

--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -28,7 +28,7 @@
   href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap"
   rel="stylesheet"
 />
-<link rel="stylesheet" href="{{style.url}}/style.css" />
+<link rel="stylesheet" href="style.css" />
 
 <!-- General meta tags -->
 <meta charset="UTF-8" />
